<resources>
    <string name="app_name">PharmaShip</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="profile">Profile</string>
    <string name="extra">Extra</string>
    <string name="settings">Settings</string>
    <string name="pharmaship">PharmaShip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_nearby_pharmacies">Find Nearby Pharmacies</string>
    <string name="prescription_queue">Prescription Queue</string>
    <string name="status">Status</string>
    <string name="date_of_arrival">Date Of Arrival</string>
    <string name="placeholder">PLACEHOLDER</string>

</resources>
